# tech11-be

./: .dockerignore  .gitignore  AI_AGENT_RESEARCH_UPDATE.md  ALEMBIC_GUIDE.md  DATABASE_SETUP.md  Dockerfile  FRONTEND_PDF_DOWNLOAD_GUIDE.md  PDF_DOWNLOAD_SOLUTION.md  README.md  VIDEO_GENERATION_GUIDE.md  axpress_scholar_agent_ver1.py  docker-compose.yml  explainer_20250922_151610.txt  explainer_20250924_155913.txt  explainer_20251001_154453.txt  final.py  frontend_develop.txt  git연습0821.txt.txt  main.py  pdf_agent_noapi.py  pyproject.toml  quiz_20250922_151610.txt  quiz_20250924_155913.txt  quiz_20251001_154453.txt  start.sh  summary_20250922_151610.txt  summary_20250924_155913.txt  summary_20251001_154453.txt  test_keyword_search.py  깃 연습 0915.txt
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 39c4b9d02dd1_add_research_caching_and_tracking_fields.py  4ddb57a0ca5c_merge_heads.py  61e75648bc1a_create_research_table.py  6278a00cd576_create_video_table.py  8b1a2f7a9c3a_tts_add_fk_research_id.py  da486a358923_create_summary_table.py  e30d316da0b6_create_tts_table.py  e33e53747c55_create_quiz_table.py
app/: main.py
app/agents/: __init__.py  figure_agent.py  reader_agent.py  script_agent.py  slide_agent.py  video_agent.py  voice_agent.py
app/core/: config.py  database.py
app/domain/: research_domain.py
app/models/: __init__.py  quiz.py  research.py  summary.py  tts.py  video.py
app/repositories/: __init__.py  quiz_repository.py  research_repository.py  summary_repository.py  tts_repository.py  video_repository.py
app/routes/: chatbot.py  quiz.py  research.py  summary.py  tts.py  video.py
app/schemas/: chatbot.py  quiz.py  research.py  summary.py  tts.py  video.py
app/services/: __init__.py  chatbot.py  quiz.py  research.py  summary.py  tts.py  video.py
frontend/ax-college/: package-lock.json  package.json
frontend/ax-college/app/: error.tsx  globals.css  (+4 more)
frontend/myhr-app/: package-lock.json  package.json
legacy/: API_Usage_Guide.md  REAME  __init__.py  axpress_scholar_agent_ver1.py  fastapi_main.py  figure_analysis_agent.py  main.py  multitest.py  quiz_tts_agent.py
tests/: test_cors.py  test_pdf_download.py  test_research_service.py
(+97 files in other folders)
