[project]
name = "tech11-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "fastapi[standard]>=0.118.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
]


[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.0.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-watcher>=0.4.3",
    "ruff>=0.13.2",
]


[tool.poe.tasks.lint]
shell = "black . && isort . && ruff check ."

[tool.poe.tasks.test]
cmd = "pytest -v --cov=. --cov-report=term --cov-report=html:htmlcov"

[tool.poe.tasks.watch-test]
cmd = "ptw . --now --clear"

[tool.poe.tasks.run]
cmd = "uvicorn app.main:app --reload"
envfile = ".env"
