[project]
name = "tech11-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "boto3>=1.40.49",
    "faiss-cpu>=1.12.0",
    "fastapi[standard]>=0.118.0",
    "googletrans>=4.0.0",
    "gtts>=2.5.4",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-openai>=0.3.34",
    "langchain-text-splitters>=0.3.11",
    "langgraph>=0.6.10",
    "moviepy>=2.2.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "pymupdf>=1.26.4",
    "rank-bm25>=0.2.2",
    "python-pptx>=1.0.2",
    "reportlab>=4.2.5",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "matplotlib>=3.10.7",
]


[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.0.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.12.0",
    "pytest-watcher>=0.4.3",
    "ruff>=0.13.2",
]


[tool.black]
extend-exclude = "legacy/"

[tool.isort]
extend_skip_glob = ["legacy/*"]
profile = "black"

[tool.ruff]
extend-exclude = ["legacy"]

[tool.poe.tasks.lint]
shell = "black . && isort . && ruff check ."

[tool.poe.tasks.test]
cmd = "pytest -v --cov=. --cov-report=term --cov-report=html:htmlcov"

[tool.poe.tasks.watch-test]
cmd = "ptw . --now --clear"

[tool.poe.tasks.run]
cmd = "uvicorn app.main:app --reload"
envfile = ".env"
